packages/webassemblyjs/test/fixtures/type-errors/store16/module.wast
(module (memory 1) (func (i64.store16 (f32.const 0) (i64.const 0))))
